<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="362dp"
        android:layout_height="375dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerDisp">

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="181dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teamA"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/teamA"
            android:layout_width="179dp"
            android:layout_height="45dp"
            android:hint="@string/teamA_hint"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/scoreA"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="181dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="359dp"
            android:backgroundTint="@android:color/darker_gray"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/teamB"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:hint="@string/teamB_hint"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/scoreB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teamA" />

        <TextView
            android:id="@+id/scoreB"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#070707"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/Bpoints3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/scoreA" />

        <Button
            android:id="@+id/Apoints3"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="197dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/three"
            android:textColor="#070707"
            app:layout_constraintBottom_toTopOf="@+id/Apoints2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Apoints2"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="198dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/two"
            android:textColor="#070707"
            app:layout_constraintBottom_toTopOf="@+id/Afree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Afree"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="196dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/free_throw"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/scoreA"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#070707"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/Apoints3"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Bpoints3"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="196dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/three"
            android:textColor="#070707"
            app:layout_constraintBottom_toTopOf="@+id/Bpoints2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Bpoints2"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="196dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/two"
            android:textColor="#070707"
            app:layout_constraintBottom_toTopOf="@+id/Bfree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Bfree"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="196dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/free_throw"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/imageButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/teamAIcon"
            android:layout_width="82dp"
            android:layout_height="79dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/teamBIcon"
            android:layout_width="82dp"
            android:layout_height="79dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/winner"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/winner"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <TextView
        android:id="@+id/winnerDisp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="361dp"
        android:layout_height="94dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/save_button"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/displayBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="13dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/display_button"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saveBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.507" />

        <Button
            android:id="@+id/reset"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="13dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/reset"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="267dp"
        android:layout_height="164dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner" />

</androidx.constraintlayout.widget.ConstraintLayout>